fixed embedly alignment in post row grid

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -632,6 +632,11 @@ display:none;
   .embedly-embed { 
     margin-left: 86px; 
   }
+
+  .block .embedly-embed { 
+    margin-left: 0px; 
+  }
+
 }
 
 
